add dependencies and gitignore

--- a/package.json
+++ b/package.json
@@ -16,5 +16,11 @@
   "bugs": {
     "url": "https://github.com/Polartundra45/tshirt-app/issues"
   },
-  "homepage": "https://github.com/Polartundra45/tshirt-app#readme"
+  "homepage": "https://github.com/Polartundra45/tshirt-app#readme",
+  "dependencies": {
+    "ejs": "^3.1.6",
+    "express": "^4.17.1",
+    "method-override": "^3.0.0",
+    "mongoose": "^5.12.10"
+  }
 }
